--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,6 @@
-Streamlit>=2.0.0
-haystack>=1.0.0
-pandas>=2.0.0
-numpy>=1.24.0
-requests>=2.31.0
-
-# Baseball Data
-pybaseball>=2.2.0
-
-# ML and Betting Analysis
-alphapy>=2.4.1
-sports-betting>=0.4.0
-ta-lib>=0.4.0  # Required by AlphaPy for technical analysis
-scikit-optimize>=0.9.0  # Required by AlphaPy for hyperparameter optimization
-scikit-learn>=1.0.0
-optuna>=3.0.0  # For hyperparameter optimization
-imbalanced-learn>=0.10.0  # For handling imbalanced betting data
-
-# Odds Scraping
-selenium>=4.0.0
-beautifulsoup4>=4.9.0
-aiohttp>=3.8.0
-scikit-learn>=1.3.0
-python-dateutil>=2.8.2
-pytz>=2023.3
-
-# API integrations
-aiohttp>=3.8.5
-
-# Web interface
-fastapi>=0.101.0
-uvicorn>=0.23.0
-jinja2>=3.1.2
-
-# Development tools
-pytest>=7.4.0
-black>=23.7.0
-flake8>=6.1.0
-mypy>=1.5.0
-
-# Jupyter notebooks for analysis
-jupyter>=1.0.0
-notebook>=7.0.2
+pandas==2.0.3
+numpy==1.24.3
+requests==2.31.0
+beautifulsoup4==4.12.2
+python-dateutil==2.8.2
+pytz==2023.3
