Update betting analysis with improved value calculation and Netlify deployment setup

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 
 [build.environment]
   PYTHON_VERSION = "3.9"
+  ODDS_API_KEY = "fe3e1db58259d6d7d3599e2ae3d22ecc"
 
 [[redirects]]
   from = "/analyze"
