--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,45 @@
 [build]
-  command = "pip install -r requirements.txt && pip install -e ."
+  publish = "."
+  command = "echo 'Static site - no build needed'"
   functions = "netlify/functions"
-  publish = "public"
 
 [build.environment]
+  NODE_VERSION = "18"
   PYTHON_VERSION = "3.9"
-  ODDS_API_KEY = "fe3e1db58259d6d7d3599e2ae3d22ecc"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self' *.netlify.app; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' /.netlify/functions/* https://statsapi.mlb.com https://api.the-odds-api.com https://api.weatherapi.com; img-src 'self' data:;"
+
+[[headers]]
+  for = "*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=86400"
+
+[[headers]]
+  for = "*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=86400"
 
 [[redirects]]
-  from = "/analyze"
-  to = "/.netlify/functions/analyze"
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
   status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[dev]
+  command = "python -m http.server 8000"
+  port = 8000
+  publish = "."
+
+[[plugins]]
+  package = "@netlify/plugin-sitemap"
