Fix: Update Netlify build configuration and add index.html

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,12 @@
 [build]
   publish = "."
-  command = "echo 'Static site - no build needed'"
+  command = "pip install -r requirements.txt"
   functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
   PYTHON_VERSION = "3.9"
+  PIP_FLAGS = "--no-cache-dir"
 
 [[headers]]
   for = "/*"
