--- a/netlify.toml
+++ b/netlify.toml
@@ -15,7 +15,7 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self' *.netlify.app; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' /.netlify/functions/* https://statsapi.mlb.com https://api.the-odds-api.com https://api.weatherapi.com; img-src 'self' data:;"
+    Content-Security-Policy = "default-src 'self' *.netlify.app; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' /.netlify/functions/* https://statsapi.mlb.com https://api.the-odds-api.com https://api.weatherapi.com; img-src 'self' data:;"
 
 [[headers]]
   for = "*.js"
@@ -26,11 +26,6 @@
   for = "*.css"
   [headers.values]
     Cache-Control = "public, max-age=86400"
-
-[[redirects]]
-  from = "/.netlify/functions/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
 
 [[redirects]]
   from = "/*"
