--- a/netlify/functions/analyze/package.json
+++ b/netlify/functions/analyze/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "MLB betting analyzer function",
   "main": "analyze.js",
+  "type": "module",
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^3.3.1"
   }
 }
