--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "description": "MLB betting analyzer application",
   "type": "module",
+  "scripts": {
+    "start": "netlify dev",
+    "build": "echo 'No build step required'"
+  },
   "dependencies": {
     "node-fetch": "^3.3.1",
-    "@netlify/functions": "^2.0.0"
+    "@netlify/functions": "^2.0.0",
+    "chart.js": "^4.0.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^15.0.0"
   }
 }
