--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-pandas>=2.0.3
-numpy>=1.24.3
-requests>=2.31.0
-beautifulsoup4>=4.12.2
-python-dateutil>=2.8.2
-pytz>=2023.3
-setuptools>=65.5.1
+Streamlit
+haystack
+pandas
+numpy
+requests
