--- a/netlify.toml
+++ b/netlify.toml
@@ -23,7 +23,7 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self' *.netlify.app; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' /.netlify/functions/* https://statsapi.mlb.com https://api.the-odds-api.com https://api.weatherapi.com *.mongodb.net; img-src 'self' data:;"
+    Content-Security-Policy = "default-src 'self' *.netlify.app; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com; connect-src 'self' /.netlify/functions/* https://statsapi.mlb.com https://api.the-odds-api.com https://api.weatherapi.com *.mongodb.net; img-src 'self' data:;"
     Cache-Control = "public, max-age=86400"
 
 [[headers]]
